# GMEXT-Steamworks

./: .gitignore  LICENSE  README.md  metadata.json
.claude/: settings.json
.github/ISSUE_TEMPLATE/: config.yml  extension_bug_report.yml  extension_docs_report.yml  feature-request.yml
docs/: DLC.js  UGC.js  _Sidebar.md  _footer.md  achievements.js  cloud.js  dedicated_servers.js  dlc.js  documentation.js  documentation_new.js  extgen_docs.js  general.js  guides.md  input.js  inventory.js  leaderboards.js  lobbies.js  management.js  messages.js  music.js  networking.js  networking_messages.js  networking_sockets.js  overlay.js  parties.js  social.js  sockets.js  timeline.js  ugc.js  utils.js
source/: .gitignore  build_linux64.sh
source/Steamworks_gml/: .gitignore  Steamworks.resource_order  Steamworks.yyp
source/Steamworks_gml/datafiles/: GMEXT-Steamwork Docs  GMEXT-Steamwork Unix Docs.html  GMEXT-Steamwork Win Docs  GMEXT-Steamwork Win Docs.lnk  basic_items.json
source/Steamworks_gml/datafiles/docs/: 404.html  _Footer.html  _Sidebar.html  achievements.html  cloud.html  dlc.html  general.html  guides.html  home.html  index.html  input.html  inventory.html  leaderboards.html  lobbies.html  management.html  music.html  networking.html  overlay.html  social.html  ugc.html  utilities.html
source/Steamworks_gml/datafiles/steamworks_docs/: 404.html  _footer.html  achievements.html  cloud.html  general.html  guides.html  home.html  index.html  input.html  inventory.html  leaderboards.html  lobbies.html  management.html  music.html  networking.html  overlay.html  social.html  utilities.html
source/Steamworks_gml/extensions/ExtensionCore/: ExtensionCore.yy
source/Steamworks_gml/extensions/Notarizer/: Notarizer.yy  pre_package_step.sh
source/Steamworks_gml/extensions/steamworks/: Steamworks.yy  libSteamworks.dylib  post_build_step.bat  post_build_step.sh  scriptUtils.bat  scriptUtils.sh
source/Steamworks_gml/extensions/steamworks/source/: .clang-format  CMakeLists.txt  CMakePresets.json  config.json  declarations.yy  documentation.js  extgen.schema.json  extgen_docs.js  spec.gmidl
source/Steamworks_gml/extensions/steamworks/source/.claude/: settings.json
source/Steamworks_gml/extensions/steamworks/source/cmake/: Gemfile  extgen_integrate_gamemaker_xcode.cmake  extgen_integrate_gamemaker_xcode.rb  extgen_package_xcframework.cmake  extgen_xcframework.cmake
source/Steamworks_gml/extensions/steamworks/source/cmake/android/: extgen_post_build.cmake  extgen_post_project.cmake
source/Steamworks_gml/extensions/steamworks/source/cmake/apple_mobile/: Gemfile  extgen_post_build.cmake  extgen_xcframework_package.cmake  extgen_xcframework_targets.cmake  extgen_xcode_integrate.cmake
source/Steamworks_gml/extensions/steamworks/source/cmake/ios/: extgen_post_project.cmake
source/Steamworks_gml/extensions/steamworks/source/cmake/linux/: extgen_post_build.cmake  extgen_post_project.cmake
source/Steamworks_gml/extensions/steamworks/source/cmake/macos/: extgen_post_build.cmake  extgen_post_project.cmake
source/Steamworks_gml/extensions/steamworks/source/cmake/tvos/: extgen_post_project.cmake
source/Steamworks_gml/extensions/steamworks/source/cmake/windows/: extgen_post_build.cmake  extgen_post_project.cmake
source/Steamworks_gml/extensions/steamworks/source/code_gen/core/: GMExtUtils.cpp  GMExtUtils.h  GMExtWire.cpp  GMExtWire.h
source/Steamworks_gml/extensions/steamworks/source/code_gen/native/: SteamworksInternal_exports.h  SteamworksInternal_native.cpp  SteamworksInternal_native.h
source/Steamworks_gml/extensions/steamworks/source/src/: CMakeLists.txt  GMSteamworks.h  GMSteamworks_core.cpp  gm_steam_api.cpp  gm_steam_apps.cpp  gm_steam_apps.cpp.bak  gm_steam_friends.cpp  gm_steam_input.cpp  gm_steam_input.cpp.bak  gm_steam_inventory.cpp  gm_steam_matchmaking.cpp  gm_steam_music.cpp  gm_steam_networking_messages.cpp  gm_steam_networking_sockets.cpp  gm_steam_parties.cpp  gm_steam_remote_storage.cpp  gm_steam_screenshots.cpp  gm_steam_screenshots.cpp.bak  gm_steam_timeline.cpp  gm_steam_ugc.cpp  gm_steam_user.cpp  gm_steam_userstats.cpp  gm_steam_utils.cpp  steam_async_common.h
source/Steamworks_gml/extensions/steamworks/source/src/native/: Steamworks_native.cpp  Steamworks_native.h
source/Steamworks_gml/extensions/steamworks/source/templates/: CMakeUserPresets.json.template
source/Steamworks_gml/fonts/Font_YoYo_15/: Font_YoYo_15.old.yy  Font_YoYo_15.yy  Font_Yoyo_20.old.yy
source/Steamworks_gml/fonts/fnt_gm_15/: fnt_gm_15.yy
source/Steamworks_gml/fonts/fnt_gm_20/: fnt_gm_20.yy
source/Steamworks_gml/fonts/fnt_gm_30/: fnt_gm_30.yy
source/Steamworks_gml/fonts/font_yoyo_20/: Font_Yoyo_20.yy
source/Steamworks_gml/fonts/font_yoyo_30/: Font_Yoyo_30.old.yy  Font_Yoyo_30.yy
source/Steamworks_gml/fonts/font_yoyo_50/: Font_Yoyo_20.yy  Font_Yoyo_50.old.yy  Font_Yoyo_50.yy
source/Steamworks_gml/notes/changelog/: changelog.txt  changelog.yy
source/Steamworks_gml/objects/Obj_Steam/: Create_0.gml  Draw_64.gml  KeyPress_39.gml  KeyPress_65.gml  KeyPress_68.gml  KeyPress_82.gml  Obj_Steam.yy  Other_3.gml  Other_69.gml  Step_0.gml
source/Steamworks_vs/Steamworks/: DesktopExtensionTools.cpp  DesktopExtensionTools.h  DesktopExtensionTools.mm  Extension_Interface.h  IniOptionsLibrary.cpp  IniOptionsLibrary.h  IniOptionsLibrary.mm  Steamworks.vcxproj  Steamworks.vcxproj.filters  dllmain.cpp  steam_music.cpp
source/Steamworks_xcode/Steamworks.xcodeproj/: project.pbxproj
source/json-c-0.9/: JSON-config.h  arraylist.c  bits.h  debug.c  debug.h  json-c.h  json_object.c  json_object.h  json_tokener.c  json_tokener.h  json_util.c  linkhash.c  printbuf.c  printbuf.h
source/json-c-0.9/3DS/: JSON-configM.h
source/json-c-0.9/Mac/: JSON-configM.h
source/json-c-0.9/PS3/: JSON-configM.h
source/json-c-0.9/Switch/: JSON-configM.h
source/json-c-0.9/Tizen/: JSON-configM.h
source/json-c-0.9/WinMetro/: JSON-configM.h
source/json-c-0.9/XboxOne/: JSON-configM.h
source/json-c-0.9/iPad/: JSON-configM.h
templates/: release_body.md  release_title.md
(+685 files in other folders)
